# Python-Custom-Package

./: .gitignore  MANIFEST.in  PYTHON_PACKAGING_GUIDE.md  README.md  USAGE_GUIDE.md  pyproject.toml  setup.py
.github/workflows/: daily-diff.yml  pull-branch.yml  scheduled-share-local-to-branch.yml  share-local-to-branch.yml  shutdown.yml  update-branches.yml  update2.yml
etc/: setup-github-runner.sh
etc/utils/: .env.example  Dockerfile.runner  README-MULTIARCH.md  README-RUNNER.md  docker-compose.yml  entrypoint.sh
ezbot_shared/: __init__.py  action_helpers.sh  requirements.txt
ezbot_shared/discord/: stdExceptions.py
ezbot_shared/grammar/: ScriptConnector.g4  ScriptConnector.interp  ScriptConnectorLexer.interp  ScriptConnectorLexer.py  ScriptConnectorLexer.tokens  ScriptConnectorListener.py  ScriptConnectorParser.py  __init__.py
ezbot_shared/grammar/.antlr/: ScriptConnector.interp  ScriptConnectorBaseListener.java  ScriptConnectorLexer.interp  ScriptConnectorLexer.java  ScriptConnectorLexer.tokens  ScriptConnectorListener.java  ScriptConnectorParser.java
lib/: __init__.py  action_helpers.sh  stdsubs.py
lib/discord/: __init__.py
lib/files/: word_doc.docx
